--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Senior Design</title>
 </head>
 <body>
-
+<h1>Welcome to the webpage</h1>
 </body>
 </html>
