adding lab-one files

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="post.html">Latest Post</a>
+                        <a href="first-post.html">Latest Post</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -130,7 +130,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2014</p>
+                    <p class="copyright text-muted">http://homepage.cs.uiowa.edu/~rshid/</p>
                 </div>
             </div>
         </div>
