--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="post.html">Latest Post</a>
+                        <a href="first-post.html">Latest Post</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -78,7 +78,7 @@
                     <div class="page-heading">
                         <h1>Contact Us</h1>
                         <hr class="small">
-                        <span class="subheading">Have questions? We have answers (maybe).</span>
+                        <span class="subheading">Want to contact us?</span>
                     </div>
                 </div>
             </div>
@@ -167,7 +167,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2014</p>
+                    <p class="copyright text-muted">http://homepage.cs.uiowa.edu/~rshid/</p>
                 </div>
             </div>
         </div>
