Added blog posts.

--- a/9.22.2015.html
+++ b/9.22.2015.html
@@ -57,7 +57,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="first-post.html">Latest Post</a>
+                        <a href="10.17.2015.html">Latest Post</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -92,11 +92,16 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 
-                    <p>This lab was tough at times but overall a tremendous learning experience.</p>
+                    <p>Overall this lab was successful for us as a group. Our demonstration
+                    worked perfectly and we were all able to use our unique talents to get the job done on time.</p>
 
+                    <p>Here's a demonstration of our chart display: </p>
                     <a href = "dynamic-chart.html">Lab One Dynamic Chart</a> <br>
                     <a href = "static-chart.html"> Lab One Static Chart</a>
 
+                    <p>Checkout our <a href = "https://github.com/mbrashid62/EE-Design---Lab-1-">source code</a>!</p>
+
+                </div>
             </div>
         </div>
     </article>
