--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="first-post.html">Latest Post</a>
+                        <a href="9.22.2015.html">Latest Post</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
