--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Clean Blog - Contact</title>
+    <title>Senior Design - Blog Site</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -57,7 +57,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="first-post.html">Latest Post</a>
+                        <a href="9.22.2015.html">Latest Post</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
