--- a/10.17.2015.html
+++ b/10.17.2015.html
@@ -101,7 +101,7 @@
                 <img src = "img/lab-2-hardware.JPG" class = "center-block img-post">
 
                 <p>
-                   Our group has a plan for how we are going to write the code to accomplish this task. Now we all that is
+                   Our group has a plan for how we are going to write the code to accomplish this task. Now all that is
                     left to do is implement it.
                 </p>
             </div>
